--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es6",
     "moduleResolution": "node",
-    "sourceMap": true,
+    "removeComments": true,
+    "sourceMap": false,
     "outDir": "dist",
     "typeRoots": [
       "node_modules/@types"
