--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,14 @@
   "include": [
     "src/**/*.ts"
   ],
-  "exclude": []
+  "exclude": [],
+  "awesomeTypescriptLoaderOptions": {
+    "forceIsolatedModules": true,
+    "useBabel": true,
+    "babelCore": "@babel/core",
+    "useCache": true,
+    "reportFiles": [
+      "src/**/*.{ts,tsx}"
+    ]
+  }
 }
