--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "chokidar": "^2.1.5",
+    "commander": "^2.20.0",
     "fs-extra": "^8.1.0",
     "ignore": "^5.1.2",
     "shelljs": "^0.8.3"
