--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
     "args": [
       "g",
       "i",
-      "/Users/zouyoushun/Project/tool/webpack-index-generator/example",
+      "./example",
       "--js",
       "--force"
     ]
