--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^4.1.0",
     "ts-loader": "^5.4.4",
+    "tslint": "^5.19.0",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
