--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.3.1",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^8.0.0",
+    "@types/prettier": "^1.18.2",
     "@types/shelljs": "^0.8.5",
     "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^4.1.0",
@@ -31,6 +32,7 @@
     "commander": "^2.20.0",
     "fs-extra": "^8.1.0",
     "ignore": "^5.1.2",
+    "prettier": "^1.18.2",
     "shelljs": "^0.8.3"
   },
   "author": "",
