--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@types/chokidar": "^2.1.3",
+    "@types/eslint": "^6.1.1",
     "@types/fs-extra": "^8.0.0",
     "@types/prettier": "^1.18.2",
     "@types/shelljs": "^0.8.5",
@@ -30,6 +31,7 @@
   "dependencies": {
     "chokidar": "^2.1.5",
     "commander": "^2.20.0",
+    "eslint": "^6.3.0",
     "fs-extra": "^8.1.0",
     "ignore": "^5.1.2",
     "prettier": "^1.18.2",
